# krun.legacy

./: .clang-format  .editorconfig  .gitattributes  Cargo.toml  Makefile  krun-guest.c  krun.c
.github/workflows/: clang-format-check.yml
crates/krun/: Cargo.toml
crates/krun-guest/: Cargo.toml
crates/krun-guest/src/: fex.rs  mount.rs  net.rs  sommelier.rs  user.rs
crates/krun/src/: cli_options.rs  net.rs
crates/libkrun/: Cargo.toml  build.rs
crates/utils/: Cargo.toml
crates/utils/src/: lib.rs  tracing.rs
