[package]
name = "krun-guest"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
description = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[dependencies]
anyhow = { workspace = true }
bpaf = { workspace = true }
nix = { workspace = true, features = ["user"] }
rustix = { workspace = true, features = ["fs", "mount", "system"] }
tempfile = { workspace = true }
tracing = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, features = ["env-filter"], optional = true }
utils = { path = "../utils" }

[features]
default = ["tracing"]
tracing = ["dep:tracing", "dep:tracing-subscriber", "utils/tracing"]
