[package]
name = "utils"
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
publish = false

[dependencies]
tracing = { workspace = true, optional = true }

[features]
default = []
tracing = ["dep:tracing"]
